--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="priceFormat">%1s KGS/мес</string>
     <string name="roomsFormat">%1s комн.</string>
     <string name="areaFormat">%1s м²</string>
+    <string name="searchHint">ЖК, улица, район, город</string>
+    <string name="filtr">Фильтр</string>
 </resources>
